// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat screen tests renders chat card correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderBottomWidth": 0,
        "borderColor": "#ccc",
        "borderLeftWidth": 0,
        "borderRadius": 2,
        "borderRightWidth": 0,
        "borderTopWidth": 0,
        "elevation": null,
        "flex": 1,
        "flexWrap": "nowrap",
        "marginBottom": 5,
        "marginLeft": 2,
        "marginRight": 2,
        "marginTop": 5,
        "shadowColor": null,
        "shadowOffset": null,
        "shadowOpacity": null,
        "shadowRadius": null,
      },
      Object {
        "alignSelf": "flex-start",
        "marginLeft": 7,
        "marginRight": 7,
        "maxWidth": "75%",
      },
      Object {},
    ]
  }
  transparent={true}
>
  <View
    bordered={true}
    header={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderBottomWidth": 0.5,
          "borderColor": "#ccc",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 15,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 15,
        },
        Object {
          "paddingBottom": 0,
          "paddingLeft": 10,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#007aff",
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "600",
        }
      }
      uppercase={false}
    >
      John
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 10,
        },
        Object {
          "alignSelf": "flex-start",
          "paddingLeft": 10,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          }
        }
        uppercase={false}
      >
        hello
      </Text>
    </View>
  </View>
  <View
    bordered={true}
    footer={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderBottomWidth": 0.5,
          "borderColor": "#ccc",
          "borderRadius": 2,
          "borderTopWidth": 0.5,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 10,
        },
        Object {
          "alignItems": "flex-end",
          "paddingBottom": 4,
          "paddingLeft": 10,
          "paddingTop": 0,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#007aff",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "600",
          },
          Object {
            "textAlign": "right",
          },
        ]
      }
      uppercase={false}
    >
      now
    </Text>
  </View>
</View>
`;

exports[`chat screen tests renders chat form correctly with defaults 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#F8F8F8",
        "borderColor": "#cbcbcb",
        "borderTopWidth": 0.5,
        "elevation": 3,
        "flexDirection": "row",
        "height": 55,
        "justifyContent": "center",
        "left": 0,
        "paddingBottom": 0,
        "right": 0,
      },
      Object {
        "backgroundColor": "transparent",
        "height": 65,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "stretch",
          "backgroundColor": undefined,
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        Object {
          "backgroundColor": "white",
          "borderRadius": 20,
          "marginBottom": 12,
          "marginLeft": 7,
          "marginRight": 7,
          "marginTop": 12,
          "paddingLeft": 7,
          "paddingRight": 7,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      multiline={true}
      placeholder="Type a message"
      placeholderTextColor="#575757"
      rowSpan={2}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "color": "#000",
          "flex": 4,
          "fontSize": 15,
          "height": 50,
          "justifyContent": "center",
          "paddingLeft": 10,
          "paddingRight": 5,
          "textAlignVertical": "top",
        }
      }
      underlineColorAndroid="rgba(0,0,0,0)"
    />
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "transparent",
          "borderBottomWidth": null,
          "borderColor": null,
          "borderLeftWidth": null,
          "borderRadius": 5,
          "borderRightWidth": null,
          "borderTopWidth": null,
          "elevation": 0,
          "flex": 1,
          "flexDirection": null,
          "height": 50,
          "justifyContent": "center",
          "opacity": 1,
          "paddingBottom": 6,
          "paddingTop": 6,
          "shadowColor": null,
          "shadowOffset": null,
          "shadowOpacity": null,
          "shadowRadius": null,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "color": "#000",
                "fontSize": 30,
              },
              Object {
                "color": "#007aff",
                "fontSize": 24,
                "marginLeft": 16,
                "marginRight": 16,
                "paddingTop": 2,
              },
            ],
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`chat screen tests renders correctly with defaults 1`] = `
Array [
  <RCTScrollView
    automaticallyAdjustContentInsets={false}
    contentContainerStyle={
      Array [
        Object {
          "padding": undefined,
        },
        undefined,
      ]
    }
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    enableAutomaticScroll={true}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    getScrollResponder={[Function]}
    handleOnScroll={[Function]}
    keyboardDismissMode="interactive"
    keyboardOpeningTime={250}
    keyboardShouldPersistTaps="handled"
    keyboardSpace={0}
    onScroll={[Function]}
    resetKeyboardSpace={[Function]}
    resetScrollToCoords={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    scrollEventThrottle={1}
    scrollForExtraHeightOnAndroid={[Function]}
    scrollToEnd={[Function]}
    scrollToFocusedInput={[Function]}
    scrollToPosition={[Function]}
    showsVerticalScrollIndicator={true}
    style={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
      }
    }
    viewIsInsideTabBar={false}
  >
    <View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 0,
              "borderColor": "#ccc",
              "borderLeftWidth": 0,
              "borderRadius": 2,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "elevation": null,
              "flex": 1,
              "flexWrap": "nowrap",
              "marginBottom": 5,
              "marginLeft": 2,
              "marginRight": 2,
              "marginTop": 5,
              "shadowColor": null,
              "shadowOffset": null,
              "shadowOpacity": null,
              "shadowRadius": null,
            },
            Object {
              "alignSelf": "flex-start",
              "marginLeft": 7,
              "marginRight": 7,
              "maxWidth": "75%",
            },
            Object {},
          ]
        }
        transparent={true}
      >
        <View
          bordered={true}
          header={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 15,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 15,
              },
              Object {
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
            uppercase={false}
          >
            James Bond
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignSelf": "flex-start",
                "paddingLeft": 10,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "alignSelf": "stretch",
                "flex": 1,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#000",
                  "fontFamily": "System",
                  "fontSize": 16,
                }
              }
              uppercase={false}
            >
              Doing what you like..
            </Text>
          </View>
        </View>
        <View
          bordered={true}
          footer={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "borderTopWidth": 0.5,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignItems": "flex-end",
                "paddingBottom": 4,
                "paddingLeft": 10,
                "paddingTop": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
            uppercase={false}
          >
            27/06/2018
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 0,
              "borderColor": "#ccc",
              "borderLeftWidth": 0,
              "borderRadius": 2,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "elevation": null,
              "flex": 1,
              "flexWrap": "nowrap",
              "marginBottom": 5,
              "marginLeft": 2,
              "marginRight": 2,
              "marginTop": 5,
              "shadowColor": null,
              "shadowOffset": null,
              "shadowOpacity": null,
              "shadowRadius": null,
            },
            Object {
              "alignSelf": "flex-start",
              "marginLeft": 7,
              "marginRight": 7,
              "maxWidth": "75%",
            },
            Object {
              "alignSelf": "flex-end",
            },
          ]
        }
        transparent={true}
      >
        <View
          bordered={true}
          header={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 15,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 15,
              },
              Object {
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
            uppercase={false}
          >
            you
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignSelf": "flex-start",
                "paddingLeft": 10,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "alignSelf": "stretch",
                "flex": 1,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#000",
                  "fontFamily": "System",
                  "fontSize": 16,
                }
              }
              uppercase={false}
            >
              Doing?
            </Text>
          </View>
        </View>
        <View
          bordered={true}
          footer={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "borderTopWidth": 0.5,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignItems": "flex-end",
                "paddingBottom": 4,
                "paddingLeft": 10,
                "paddingTop": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
            uppercase={false}
          >
            13:45
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 0,
              "borderColor": "#ccc",
              "borderLeftWidth": 0,
              "borderRadius": 2,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "elevation": null,
              "flex": 1,
              "flexWrap": "nowrap",
              "marginBottom": 5,
              "marginLeft": 2,
              "marginRight": 2,
              "marginTop": 5,
              "shadowColor": null,
              "shadowOffset": null,
              "shadowOpacity": null,
              "shadowRadius": null,
            },
            Object {
              "alignSelf": "flex-start",
              "marginLeft": 7,
              "marginRight": 7,
              "maxWidth": "75%",
            },
            Object {},
          ]
        }
        transparent={true}
      >
        <View
          bordered={true}
          header={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 15,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 15,
              },
              Object {
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
            uppercase={false}
          >
            Gary Collen
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignSelf": "flex-start",
                "paddingLeft": 10,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "alignSelf": "stretch",
                "flex": 1,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#000",
                  "fontFamily": "System",
                  "fontSize": 16,
                }
              }
              uppercase={false}
            >
              Hello
            </Text>
          </View>
        </View>
        <View
          bordered={true}
          footer={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "borderTopWidth": 0.5,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignItems": "flex-end",
                "paddingBottom": 4,
                "paddingLeft": 10,
                "paddingTop": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
            uppercase={false}
          >
            13:57
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 0,
              "borderColor": "#ccc",
              "borderLeftWidth": 0,
              "borderRadius": 2,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "elevation": null,
              "flex": 1,
              "flexWrap": "nowrap",
              "marginBottom": 5,
              "marginLeft": 2,
              "marginRight": 2,
              "marginTop": 5,
              "shadowColor": null,
              "shadowOffset": null,
              "shadowOpacity": null,
              "shadowRadius": null,
            },
            Object {
              "alignSelf": "flex-start",
              "marginLeft": 7,
              "marginRight": 7,
              "maxWidth": "75%",
            },
            Object {},
          ]
        }
        transparent={true}
      >
        <View
          bordered={true}
          header={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 15,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 15,
              },
              Object {
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
            uppercase={false}
          >
            James Bond
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignSelf": "flex-start",
                "paddingLeft": 10,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "alignSelf": "stretch",
                "flex": 1,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#000",
                  "fontFamily": "System",
                  "fontSize": 16,
                }
              }
              uppercase={false}
            >
              yeah
            </Text>
          </View>
        </View>
        <View
          bordered={true}
          footer={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "borderTopWidth": 0.5,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignItems": "flex-end",
                "paddingBottom": 4,
                "paddingLeft": 10,
                "paddingTop": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
            uppercase={false}
          >
            14:17
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>,
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#F8F8F8",
          "borderColor": "#cbcbcb",
          "borderTopWidth": 0.5,
          "elevation": 3,
          "flexDirection": "row",
          "height": 55,
          "justifyContent": "center",
          "left": 0,
          "paddingBottom": 0,
          "right": 0,
        },
        Object {
          "backgroundColor": "transparent",
          "height": 65,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": undefined,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          Object {
            "backgroundColor": "white",
            "borderRadius": 20,
            "marginBottom": 12,
            "marginLeft": 7,
            "marginRight": 7,
            "marginTop": 12,
            "paddingLeft": 7,
            "paddingRight": 7,
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        multiline={true}
        placeholder="Type a message"
        placeholderTextColor="#575757"
        rowSpan={2}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "color": "#000",
            "flex": 4,
            "fontSize": 15,
            "height": 50,
            "justifyContent": "center",
            "paddingLeft": 10,
            "paddingRight": 5,
            "textAlignVertical": "top",
          }
        }
        underlineColorAndroid="rgba(0,0,0,0)"
      />
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderBottomWidth": null,
            "borderColor": null,
            "borderLeftWidth": null,
            "borderRadius": 5,
            "borderRightWidth": null,
            "borderTopWidth": null,
            "elevation": 0,
            "flex": 1,
            "flexDirection": null,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
            "paddingBottom": 6,
            "paddingTop": 6,
            "shadowColor": null,
            "shadowOffset": null,
            "shadowOpacity": null,
            "shadowRadius": null,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "#000",
                  "fontSize": 30,
                },
                Object {
                  "color": "#007aff",
                  "fontSize": 24,
                  "marginLeft": 16,
                  "marginRight": 16,
                  "paddingTop": 2,
                },
              ],
              Object {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`chat screen tests renders view correctly with defaults 1`] = `
Array [
  <RCTScrollView
    automaticallyAdjustContentInsets={false}
    contentContainerStyle={
      Array [
        Object {
          "padding": undefined,
        },
        undefined,
      ]
    }
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    enableAutomaticScroll={true}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    getScrollResponder={[Function]}
    handleOnScroll={[Function]}
    keyboardDismissMode="interactive"
    keyboardOpeningTime={250}
    keyboardShouldPersistTaps="handled"
    keyboardSpace={0}
    onScroll={[Function]}
    resetKeyboardSpace={[Function]}
    resetScrollToCoords={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    scrollEventThrottle={1}
    scrollForExtraHeightOnAndroid={[Function]}
    scrollToEnd={[Function]}
    scrollToFocusedInput={[Function]}
    scrollToPosition={[Function]}
    showsVerticalScrollIndicator={true}
    style={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
      }
    }
    viewIsInsideTabBar={false}
  >
    <View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 0,
              "borderColor": "#ccc",
              "borderLeftWidth": 0,
              "borderRadius": 2,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "elevation": null,
              "flex": 1,
              "flexWrap": "nowrap",
              "marginBottom": 5,
              "marginLeft": 2,
              "marginRight": 2,
              "marginTop": 5,
              "shadowColor": null,
              "shadowOffset": null,
              "shadowOpacity": null,
              "shadowRadius": null,
            },
            Object {
              "alignSelf": "flex-start",
              "marginLeft": 7,
              "marginRight": 7,
              "maxWidth": "75%",
            },
            Object {},
          ]
        }
        transparent={true}
      >
        <View
          bordered={true}
          header={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 15,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 15,
              },
              Object {
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
            uppercase={false}
          >
            James Bond
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignSelf": "flex-start",
                "paddingLeft": 10,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "alignSelf": "stretch",
                "flex": 1,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#000",
                  "fontFamily": "System",
                  "fontSize": 16,
                }
              }
              uppercase={false}
            >
              Doing what you like..
            </Text>
          </View>
        </View>
        <View
          bordered={true}
          footer={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "borderTopWidth": 0.5,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignItems": "flex-end",
                "paddingBottom": 4,
                "paddingLeft": 10,
                "paddingTop": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
            uppercase={false}
          >
            27/06/2018
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 0,
              "borderColor": "#ccc",
              "borderLeftWidth": 0,
              "borderRadius": 2,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "elevation": null,
              "flex": 1,
              "flexWrap": "nowrap",
              "marginBottom": 5,
              "marginLeft": 2,
              "marginRight": 2,
              "marginTop": 5,
              "shadowColor": null,
              "shadowOffset": null,
              "shadowOpacity": null,
              "shadowRadius": null,
            },
            Object {
              "alignSelf": "flex-start",
              "marginLeft": 7,
              "marginRight": 7,
              "maxWidth": "75%",
            },
            Object {
              "alignSelf": "flex-end",
            },
          ]
        }
        transparent={true}
      >
        <View
          bordered={true}
          header={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 15,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 15,
              },
              Object {
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
            uppercase={false}
          >
            you
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignSelf": "flex-start",
                "paddingLeft": 10,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "alignSelf": "stretch",
                "flex": 1,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#000",
                  "fontFamily": "System",
                  "fontSize": 16,
                }
              }
              uppercase={false}
            >
              Doing?
            </Text>
          </View>
        </View>
        <View
          bordered={true}
          footer={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "borderTopWidth": 0.5,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignItems": "flex-end",
                "paddingBottom": 4,
                "paddingLeft": 10,
                "paddingTop": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
            uppercase={false}
          >
            13:45
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 0,
              "borderColor": "#ccc",
              "borderLeftWidth": 0,
              "borderRadius": 2,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "elevation": null,
              "flex": 1,
              "flexWrap": "nowrap",
              "marginBottom": 5,
              "marginLeft": 2,
              "marginRight": 2,
              "marginTop": 5,
              "shadowColor": null,
              "shadowOffset": null,
              "shadowOpacity": null,
              "shadowRadius": null,
            },
            Object {
              "alignSelf": "flex-start",
              "marginLeft": 7,
              "marginRight": 7,
              "maxWidth": "75%",
            },
            Object {},
          ]
        }
        transparent={true}
      >
        <View
          bordered={true}
          header={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 15,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 15,
              },
              Object {
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
            uppercase={false}
          >
            Gary Collen
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignSelf": "flex-start",
                "paddingLeft": 10,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "alignSelf": "stretch",
                "flex": 1,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#000",
                  "fontFamily": "System",
                  "fontSize": 16,
                }
              }
              uppercase={false}
            >
              Hello
            </Text>
          </View>
        </View>
        <View
          bordered={true}
          footer={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "borderTopWidth": 0.5,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignItems": "flex-end",
                "paddingBottom": 4,
                "paddingLeft": 10,
                "paddingTop": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
            uppercase={false}
          >
            13:57
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 0,
              "borderColor": "#ccc",
              "borderLeftWidth": 0,
              "borderRadius": 2,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "elevation": null,
              "flex": 1,
              "flexWrap": "nowrap",
              "marginBottom": 5,
              "marginLeft": 2,
              "marginRight": 2,
              "marginTop": 5,
              "shadowColor": null,
              "shadowOffset": null,
              "shadowOpacity": null,
              "shadowRadius": null,
            },
            Object {
              "alignSelf": "flex-start",
              "marginLeft": 7,
              "marginRight": 7,
              "maxWidth": "75%",
            },
            Object {},
          ]
        }
        transparent={true}
      >
        <View
          bordered={true}
          header={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 15,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 15,
              },
              Object {
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
            uppercase={false}
          >
            James Bond
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderRadius": 2,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignSelf": "flex-start",
                "paddingLeft": 10,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "alignSelf": "stretch",
                "flex": 1,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#000",
                  "fontFamily": "System",
                  "fontSize": 16,
                }
              }
              uppercase={false}
            >
              yeah
            </Text>
          </View>
        </View>
        <View
          bordered={true}
          footer={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderBottomWidth": 0.5,
                "borderColor": "#ccc",
                "borderRadius": 2,
                "borderTopWidth": 0.5,
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 10,
              },
              Object {
                "alignItems": "flex-end",
                "paddingBottom": 4,
                "paddingLeft": 10,
                "paddingTop": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
            uppercase={false}
          >
            14:17
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>,
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#F8F8F8",
          "borderColor": "#cbcbcb",
          "borderTopWidth": 0.5,
          "elevation": 3,
          "flexDirection": "row",
          "height": 55,
          "justifyContent": "center",
          "left": 0,
          "paddingBottom": 0,
          "right": 0,
        },
        Object {
          "backgroundColor": "transparent",
          "height": 65,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": undefined,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          Object {
            "backgroundColor": "white",
            "borderRadius": 20,
            "marginBottom": 12,
            "marginLeft": 7,
            "marginRight": 7,
            "marginTop": 12,
            "paddingLeft": 7,
            "paddingRight": 7,
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        multiline={true}
        placeholder="Type a message"
        placeholderTextColor="#575757"
        rowSpan={2}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "color": "#000",
            "flex": 4,
            "fontSize": 15,
            "height": 50,
            "justifyContent": "center",
            "paddingLeft": 10,
            "paddingRight": 5,
            "textAlignVertical": "top",
          }
        }
        underlineColorAndroid="rgba(0,0,0,0)"
      />
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderBottomWidth": null,
            "borderColor": null,
            "borderLeftWidth": null,
            "borderRadius": 5,
            "borderRightWidth": null,
            "borderTopWidth": null,
            "elevation": 0,
            "flex": 1,
            "flexDirection": null,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
            "paddingBottom": 6,
            "paddingTop": 6,
            "shadowColor": null,
            "shadowOffset": null,
            "shadowOpacity": null,
            "shadowRadius": null,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "#000",
                  "fontSize": 30,
                },
                Object {
                  "color": "#007aff",
                  "fontSize": 24,
                  "marginLeft": 16,
                  "marginRight": 16,
                  "paddingTop": 2,
                },
              ],
              Object {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>,
]
`;
